# quickly-github

./: README.md  main.py  main.qml  pyproject.toml  requirements.txt
.github/workflows/: build-canary.yml
RinUI/config/: rin_ui.json
assets/: logo.icns
data/: proxy.json
